<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Squawker</string>
    <string name="login_label">Login With Twitter</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="placeholder_full_name">Full Name</string>
    <string name="placeholder_screen_name">\@username</string>
    <string name="placeholder_body">Lorem ipsum dolorum</string>
    <string name="placeholder_time_stamp">42m</string>
    <string name="placeholder_compose_body">What\'s happening?</string>
    <string name="title_tweet">Tweet</string>
    <string name="placeholder_char_count">140</string>
    <string name="placeholder_date">5:36 AM · 5 Oct 2015</string>
    <string name="title_retweets">RETWEETS</string>
    <string name="title_favorites">FAVORITES</string>
</resources>