<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/placeholder_full_name"
        android:textColor="@color/bunker"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvFullName"
        android:layout_toEndOf="@+id/tvFullName"
        android:layout_toRightOf="@+id/tvFullName"
        android:text="@string/placeholder_screen_name"
        android:textColor="@color/blue_bayoux" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFullName"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/placeholder_body"
        android:textColor="@color/bunker" />
</RelativeLayout>