<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageButton
        android:id="@+id/ibClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:padding="10dp"
        android:src="@drawable/ic_clear_white_24dp"
        android:tint="@color/twitter_blue" />

    <ImageView
        android:id="@+id/ivAuthorImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ivAuthorImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ivAuthorImage"
        android:layout_below="@+id/ivAuthorImage"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/mystic"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/placeholder_compose_body"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLength="140"
        android:textColor="@color/bunker"
        android:textColorHint="@color/mischka"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ivAuthorImage"
        android:layout_alignRight="@+id/ivAuthorImage"
        android:layout_below="@+id/etBody"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvCharCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/placeholder_char_count" />

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@color/twitter_blue"
            android:text="@string/title_tweet"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>