<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.codepath.apps.squawker.Activities.TweetDetailActivity">

    <LinearLayout
        android:id="@+id/llUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_full_name"
                android:textColor="@color/bunker"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserScreenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_screen_name"
                android:textColor="@color/blue_bayoux" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDetailBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llUserProfile"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/placeholder_body"
        android:textColor="@color/bunker"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDetailBody"
        android:layout_alignStart="@+id/tvDetailBody"
        android:layout_below="@+id/tvDetailBody"
        android:layout_marginBottom="5dp"
        android:text="@string/placeholder_date"
        android:textColor="@color/blue_bayoux" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvDate"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/mischka" />

    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/divider1"
        android:layout_alignLeft="@+id/divider1"
        android:layout_alignRight="@+id/divider1"
        android:layout_alignStart="@+id/divider1"
        android:layout_below="@+id/divider1"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDetailRetweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="42"
            android:textColor="@color/bunker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/title_retweets"
            android:textColor="@color/icon_default" />

        <TextView
            android:id="@+id/tvDetailFavoriteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="42"
            android:textColor="@color/bunker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/title_favorites"
            android:textColor="@color/icon_default" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llCounts"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/mischka" />

    <LinearLayout
        android:id="@+id/llIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibDetailReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/reply_icon" />

        <ImageButton
            android:id="@+id/ibDetailRetweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginStart="80dp"
            android:background="@color/white"
            android:src="@drawable/retweet_icon" />

        <ImageButton
            android:id="@+id/ibDetailLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/like_icon" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llIcons"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/mischka" />

</RelativeLayout>
